example float layout 2 cols

--- a/esempi-base/index.html
+++ b/esempi-base/index.html
@@ -12,7 +12,10 @@
 
 <body>
   <div class="container">
-
+    <span class="float-right">lorem</span>
+    <div class="float-left">lorem</div>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quo illo, ab libero, blanditiis doloremque nesciunt
+    ad veniam, quibusdam fugit neque velit aspernatur temporibus quis? Ducimus natus eius dolor molestiae.
   </div>
 </body>
 
