--- a/layout-2col/index.html
+++ b/layout-2col/index.html
@@ -12,7 +12,18 @@
 
 <body>
   <div class="container">
-
+    <header></header>
+    <main class="clearfix">
+      <div class="col-left">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis reiciendis qui provident
+        ut nostrum, ab eveniet nemo natus voluptas alias iste, similique repellendus illum, impedit aliquam sunt aperiam
+        possimus beatae.</div>
+      <div class="col-right"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis reiciendis qui
+        provident
+        ut nostrum, ab eveniet nemo natus voluptas alias iste, similique repellendus illum, impedit aliquam sunt aperiam
+        possimus beatae.
+      </div>
+    </main>
+    <footer></footer>
   </div>
 </body>
 
