--- a/layout-simple/index.html
+++ b/layout-simple/index.html
@@ -11,6 +11,20 @@
 </head>
 
 <body>
+  <div class="container">
+    <header></header>
+    <main class="clearfix">
+      <div class="col-left">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint vero enim tenetur quasi atque accusantium quia
+        excepturi maiores fuga voluptatem, dolorum eligendi porro sapiente aliquid, soluta deserunt. Ea, fuga laborum?
+      </div>
+      <div class="col-right">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos provident adipisci blanditiis officiis
+        totam ea alias dicta! Quis ex quia enim corporis voluptatem quam, facilis, nostrum, fuga culpa illum velit.
+      </div>
+    </main>
+    <footer></footer>
+  </div>
 
 </body>
 
